# firebird-vcpkg-registry

./: README.md
examples/fb-cpp/: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
examples/fb-cpp/cmake/: install-rules.cmake
examples/fb-cpp/src/: main.cpp
examples/firebird/: CMakeLists.txt  README.md  vcpkg-configuration.json  vcpkg.json
examples/firebird/src/: main.cpp
ports/fb-cpp/: portfile.cmake  usage  vcpkg-cmake-wrapper.cmake.in  vcpkg.json
ports/firebird/: firebird-config.cmake  osx-corrections-1.patch  osx-corrections-2.patch  portfile.cmake  vcpkg.json  windows-vs2026-build-files.patch  windows-vs2026-build-script.patch
ports/firebird/posix/: portfile.cmake
ports/firebird/windows/: portfile.cmake
versions/: baseline.json
versions/f-/: fb-cpp.json  firebird.json
